force-app/main/default/objects/Case/fields/AAA_Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>AAA_Custom_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AAA Custom Field</label>
    <type>Checkbox</type>
</CustomField>