force-app/main/default/objects/Case/fields/XXX_custom_field__c.field-meta.xml
<CustomField>
    <fullName>XXX_custom_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XXX custom field INT</label>
    <type>Checkbox</type>
</CustomField>