force-app/main/default/objects/Case/fields/XXX_custom_picklist__c.field-meta.xml
<CustomField>
    <fullName>XXX_custom_picklist__c</fullName>
    <description>Description</description>
    <inlineHelpText>Help text</inlineHelpText>
    <label>XXX custom picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value 1</fullName>
            </value>
            <value>
                <fullName>Value 2</fullName>
            </value>
            <value>
                <fullName>Value 3</fullName>
            </value>
            <value>
                <fullName>Value 4</fullName>
            </value>
            <value>
                <fullName>Value 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>