force-app/main/default/objects/Case/recordTypes/XXX_record_type.recordType-meta.xml
<RecordType>
    <fullName>XXX_record_type</fullName>
    <active>true</active>
    <businessProcess>XXX support process</businessProcess>
    <description>description</description>
    <label>XXX record type</label>
</RecordType>