force-app/main/default/objects/Case/validationRules/XXX_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>XXX_validation_rule</fullName>
    <active>true</active>
    <description>description</description>
    <errorConditionFormula>true</errorConditionFormula>
    <errorMessage>This is true</errorMessage>
</ValidationRule>