force-app/main/default/objects/Case/listViews/Enable_Sharing_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Enable_Sharing_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Enable Sharing Queue</label>
    <queue>Enable_Sharing_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>